--- a/src/Honlsoft.DependencyInjection.SourceGenerators.Tests/Honlsoft.DependencyInjection.SourceGenerators.Tests.csproj
+++ b/src/Honlsoft.DependencyInjection.SourceGenerators.Tests/Honlsoft.DependencyInjection.SourceGenerators.Tests.csproj
@@ -11,10 +11,8 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-preview.6.22324.4" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-        <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.2" />
+        <PackageReference Include="xunit" Version="2.4.2" />
     </ItemGroup>
 
     <ItemGroup>
