--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,11 +1,17 @@
-name: .NET
+name: .NET Build, Test, and Publish Nuget Package
 
 on:
   push:
-    branches: [ "main" ]
-    tags: ["v**"]
+    branches: 
+      - "*"
+    tags: 
+      - "v[0-9]+.[0-9]+.[0-9]+"
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - "*"
+env:
+  IS_TAG: ${{ github.ref_type == "tag" }}
+  VERSION: 1.0.0
 
 defaults:
   run:
@@ -16,6 +22,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Set Version Variable
+      if: ${{ IS_TAG }}
+      env:
+        name: TAG
+        value: ${{ github.ref_name }}
+      run: echo "VERSION=${TAG#v}" >> $GITHUB_ENV
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
@@ -23,6 +35,11 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore /p:Version=$VERSION
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: pack nuget packages
+      run: dotnet pack --output nupkgs --no-restore --no-build /p:PackageVersion=$VERSION
+    - name: upload nuget package
+      if: IS_TAG && startsWith(github.ref, "refs/tags/v") }}
+      run: dotnet nuget push nupkgs/*.nupkg -k $NUGET_DEPLOY_KEY
