--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,7 +2,7 @@ name: .NET Build, Test, and Publish Nuget Package
 
 on:
   push:
-    branches: 
+    branches:
       - "**"
     tags: 
       - "v[0-9]+.[0-9]+.[0-9]+"
@@ -10,7 +10,7 @@ on:
     branches:
       - "**"
 env:
-  IS_TAG: ${{ github.ref_type == "tag" }}
+  IS_TAG: ${{ github.ref_type == 'tag' }}
   VERSION: 1.0.0
 
 defaults:
@@ -41,5 +41,5 @@ jobs:
     - name: pack nuget packages
       run: dotnet pack --output nupkgs --no-restore --no-build /p:PackageVersion=$VERSION
     - name: upload nuget package
-      if: IS_TAG && startsWith(github.ref, "refs/tags/v") }}
+      if: IS_TAG && startsWith(github.ref, 'refs/tags/v') }}
       run: dotnet nuget push nupkgs/*.nupkg -k $NUGET_DEPLOY_KEY
