--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,8 +10,8 @@ on:
     branches:
       - "**"
 env:
-  IS_TAG: ${{ github.ref_type == 'tag' }}
   VERSION: 1.0.0
+  IS_TAG: ${{github.ref_type == 'tag'
 
 defaults:
   run:
@@ -23,7 +23,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set Version Variable
-      if: ${{ IS_TAG }}
+      if: ${{ env.IS_TAG }}
       env:
         name: TAG
         value: ${{ github.ref_name }}
@@ -41,5 +41,5 @@ jobs:
     - name: pack nuget packages
       run: dotnet pack --output nupkgs --no-restore --no-build /p:PackageVersion=$VERSION
     - name: upload nuget package
-      if: IS_TAG && startsWith(github.ref, 'refs/tags/v') }}
+      if: env.IS_TAG && startsWith(github.ref, 'refs/tags/v') }}
       run: dotnet nuget push nupkgs/*.nupkg -k $NUGET_DEPLOY_KEY
