--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,7 @@ on:
       - "**"
 env:
   VERSION: 1.0.0
-  IS_TAG: ${{github.ref_type == 'tag'
+  IS_TAG: ${{github.ref_type == 'tag'}}
 
 defaults:
   run:
