--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,6 @@ on:
       - "**"
 env:
   VERSION: 1.0.0
-  IS_TAG: ${{github.ref_type == 'tag'}}
 
 defaults:
   run:
@@ -23,7 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set Version Variable
-      if: ${{ env.IS_TAG }}
+      if: ${{ github.ref_type == 'tag' }}
       env:
         name: TAG
         value: ${{ github.ref_name }}
@@ -41,5 +40,5 @@ jobs:
     - name: pack nuget packages
       run: dotnet pack --output nupkgs --no-restore --no-build /p:PackageVersion=$VERSION
     - name: upload nuget package
-      if: env.IS_TAG && startsWith(github.ref, 'refs/tags/v')
+      if: github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/v')
       run: dotnet nuget push nupkgs/*.nupkg -k $NUGET_DEPLOY_KEY
