--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,8 +24,7 @@ jobs:
     - name: Set Version Variable
       if: ${{ github.ref_type == 'tag' }}
       env:
-        name: TAG
-        value: ${{ github.ref_name }}
+        TAG: ${{ github.ref_name }}
       run: echo "VERSION=${TAG#v}" >> $GITHUB_ENV
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
