--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,11 +1,16 @@
-name: .NET
+name: .NET Build, Test, and Publish Nuget Package
 
 on:
   push:
-    branches: [ "main" ]
-    tags: ["v**"]
+    branches:
+      - "**"
+    tags: 
+      - "v[0-9]+.[0-9]+.[0-9]+"
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - "**"
+env:
+  VERSION: 1.0.0
 
 defaults:
   run:
@@ -16,6 +21,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Set Version Variable
+      if: ${{ github.ref_type == 'tag' }}
+      env:
+        TAG: ${{ github.ref_name }}
+      run: echo "VERSION=${TAG#v}" >> $GITHUB_ENV
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
@@ -23,6 +33,11 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore /p:Version=$VERSION
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: pack nuget packages
+      run: dotnet pack --output nupkgs --no-restore --no-build /p:PackageVersion=$VERSION
+    - name: upload nuget package
+      if: github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/v')
+      run: dotnet nuget push nupkgs/*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
