--- a/src/Honlsoft.DependencyInjection.SourceGenerators/Honlsoft.DependencyInjection.SourceGenerators.csproj
+++ b/src/Honlsoft.DependencyInjection.SourceGenerators/Honlsoft.DependencyInjection.SourceGenerators.csproj
@@ -24,5 +24,12 @@
         </PackageReference>
     </ItemGroup>
 
-
+    
+    <ItemGroup>
+        <None Include="$(OutputPath)\$(AssemblyName).dll"
+              Pack="true"
+              PackagePath="analyzers/dotnet/cs"
+              Visible="false" />
+    </ItemGroup>
+    
 </Project>
